--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
 
     <h5>Inicia sesion con: admin@gmail.com / contraseña: 123456</h5>
 
-    <script src="/js/login.js"></script>
+    <script src="./js/login.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
