--- a/index.html
+++ b/index.html
@@ -7,25 +7,65 @@
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <title>Document</title>
+    <title>Mi Mateico</title>
 </head>
 
 <body>
     <!--NAV-->
     <nav class="navbar bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#">🧉</a>
             <button id="logout" class="btn btn-dark">Logout</button>
         </div>
     </nav>
 
     <section class="titulo">
-        <h1>Mi Mateico 🧉</h1>
+        <h1>Mi Mateico</h1>
     </section>
 
 
     <h3 class="mx-4">Seleccioná tu mate favorito</h3>
     <section id="root"></section>
+
+
+    <!-- Agrega un elemento en tu HTML para mostrar el carrito -->
+    <div id="carrito" class="container carrito">
+        <h2>Carrito de Compras</h2>
+        <ul id="carrito-list" class="list-group">
+            <!-- Aquí se agregarán los productos del carrito -->
+        </ul>
+        <p>Total: <span id="carrito-total">$0</span></p>
+        <button id="btnComprar" class="btn btn-dark">Comprar</button>
+        <button id="btnVaciarCarrito" class="btn btn-danger">Eliminar Carrito</button>
+    </div>
+
+    <hr>
+
+    <div class="container">
+        <h2>ACEPTAMOS TODOS LOS MEDIOS DE PAGO, HACE TU CONVERSION AQUI</h2>
+    </div>
+    <section class="main-section">
+        <div class="container cotizador">
+            <div class="form-side">
+                <form action="" id="form-search">
+                    <select id="moneda" name="moneda">
+                        <option value="">Elige tu moneda</option>
+                        <option value="USD">Dolar Estadounidense</option>
+                        <option value="MXN">Peso Mexicano</option>
+                        <option value="GBP">Libras</option>
+                        <option value="EUR">Euros</option>
+                    </select>
+
+                    <select id="criptomonedas" name="criptomoneda">
+                        <option value="">Elige tu criptomoneda</option>
+                    </select>
+
+                    <input class="btn btn-dark" type="submit" value="Cotizar" />
+                    <div class="container-answer"></div>
+                </form>
+            </div>
+        </div>
+    </section>
 
 
     <script src="./js/index.js"></script>
