--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/login.css">
     <title>Login</title>
 </head>
 
@@ -22,16 +22,18 @@
     <section class="container iniciar__sesion">
         <h2>Iniciar Sesion</h2>
         <form id="loginForm">
-            <label>Mail</label>
-            <input type="email" placeholder="..." id="email" required autofocus>
-            <label>Contraseña</label>
+            <label><b>Mail:</b></label>
+            <input type="email" placeholder="..." id="email" required autofocus autocomplete="email">
+            <label><b>Contraseña:</b></label>
             <input type="password" placeholder="..." id="password" required>
-            <input type="submit" value="ingresar">
+            <input type="submit" value="Ingresar" class="btn btn-dark mt-3">
         </form>
-        <p>No tienes una cuenta? <a href="registrar.html">Registro</a></p>
+        <div class="login__registro">
+            <p>No tienes una cuenta? <a href="registrar.html"><button class="btn btn-dark">Registro</button></a></p>
+        </div>
     </section>
 
-    <h5>Inicia sesion con: admin@gmail.com / contraseña: 123456</h5>
+    <h5>Debe registrarse para entrar.</h5>
 
     <script src="./js/login.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
