--- a/registrar.html
+++ b/registrar.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/registrar.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <title>Registro</title>
@@ -14,21 +14,23 @@
     <!--NAV-->
     <nav class="navbar bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Mi Mateico</a>
+            <a class="navbar-brand" href="#">Mi Mateico 🧉</a>
         </div>
     </nav>
-    <section class="container registrarse ">
-        <h2>Registro</h2>
+    <section class="registrarse">
+        <h2 class="pt-2">Registro</h2>
         <form id="registrarForm">
-            <label>Nombre</label>
+            <label><b>Nombre:</b></label>
             <input type="text" placeholder="Cecilia" id="name" required autofocus>
-            <label>Mail</label>
+            <label><b>Mail:</b></label>
             <input type="email" placeholder="ceci@example.com" id="email" required>
-            <label>Contraseña</label>
-            <input type="password" placeholder="***" id="password" required>
-            <input type="submit" value="Registro">
+            <label><b>Contraseña:</b></label>
+            <input type="password" placeholder="******" id="password" required>
+            <input type="submit" value="Registro" class="btn btn-dark mt-3">
         </form>
-        <p>Ya tienes una cuenta? <a href="login.html">Login</a></p>
+        <div class="login__registro">
+            <p>Ya tienes una cuenta? <a href="login.html"><button class="btn btn-dark">Login</button></a></p>
+        </div>
     </section>
 
     <script src="./js/registrar.js"></script>
