--- a/registrar.html
+++ b/registrar.html
@@ -18,7 +18,7 @@
         </div>
     </nav>
     <section class="registrarse">
-        <h2 class="pt-2">Registro</h2>
+        <h2>Registro</h2>
         <form id="registrarForm">
             <label><b>Nombre:</b></label>
             <input type="text" placeholder="Cecilia" id="name" required autofocus>
@@ -32,7 +32,6 @@
             <p>Ya tienes una cuenta? <a href="login.html"><button class="btn btn-dark">Login</button></a></p>
         </div>
     </section>
-
     <script src="./js/registrar.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
