--- a/index.html
+++ b/index.html
@@ -4,48 +4,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <title>Mi Mateico</title>
+    <title>Mi Mateico 🧉</title>
 </head>
 
 <body>
     <!--NAV-->
-    <nav class="navbar bg-body-tertiary">
+    <nav class="navbar fixed-top bg-body-tertiary shadow-lg p-3 mb-5 bg-white rounded">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">🧉</a>
+            <!--BOTON LOGOUT-->
             <button id="logout" class="btn btn-dark">Logout</button>
         </div>
     </nav>
-
+    <!--TITULO-->
     <section class="titulo">
         <h1>Mi Mateico</h1>
+        <h3 class="">Seleccioná tu mate favorito</h3>
     </section>
-
-
-    <h3 class="mx-4">Seleccioná tu mate favorito</h3>
+    <!--PRODUCTOS-->
     <section id="root"></section>
-
-
-    <!-- Agrega un elemento en tu HTML para mostrar el carrito -->
-    <div id="carrito" class="container carrito">
-        <h2>Carrito de Compras</h2>
+    <hr class="my-5">
+    <!-- CARRITO -->
+    <div id="carrito" class="carrito">
+        <h2>Carrito:</h2>
         <ul id="carrito-list" class="list-group">
-            <!-- Aquí se agregarán los productos del carrito -->
+            <!-- SE AGREGAN PRODUCTOS AL CARRITO -->
         </ul>
         <p>Total: <span id="carrito-total">$0</span></p>
         <button id="btnComprar" class="btn btn-dark">Comprar</button>
         <button id="btnVaciarCarrito" class="btn btn-danger">Eliminar Carrito</button>
     </div>
-
-    <hr>
-
-    <div class="container">
-        <h2>ACEPTAMOS TODOS LOS MEDIOS DE PAGO, HACE TU CONVERSION AQUI</h2>
+    <hr class="my-5">
+    <!--COTIZADOR DE MONEDA PARA USAR API-->
+    <div class=" container__conversor">
+        <h2 class="titulo__conversor">¡Aceptamos cripto!</h2>
     </div>
     <section class="main-section">
         <div class="container cotizador">
+            <h3>Hacé tu conversión:</h3>
             <div class="form-side">
                 <form action="" id="form-search">
                     <select id="moneda" name="moneda">
@@ -55,19 +54,22 @@
                         <option value="GBP">Libras</option>
                         <option value="EUR">Euros</option>
                     </select>
-
                     <select id="criptomonedas" name="criptomoneda">
                         <option value="">Elige tu criptomoneda</option>
                     </select>
-
                     <input class="btn btn-dark" type="submit" value="Cotizar" />
                     <div class="container-answer"></div>
                 </form>
             </div>
         </div>
     </section>
-
-
+    <br>
+    <!--FOOTER-->
+    <footer>
+        <nav class="navbar bottom">
+            <p class="p__footer">Mi Mateico🧉®</p>
+        </nav>
+    </footer>
     <script src="./js/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
