--- a/login.html
+++ b/login.html
@@ -14,27 +14,24 @@
     <!--NAV-->
     <nav class="navbar bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Mi Mateico</a>
+            <a class="navbar-brand" href="#">Mi Mateico 🧉</a>
         </div>
     </nav>
-
     <!--FORMULARIO INICIAR SESION-->
     <section class="container iniciar__sesion">
         <h2>Iniciar Sesion</h2>
         <form id="loginForm">
             <label><b>Mail:</b></label>
-            <input type="email" placeholder="..." id="email" required autofocus autocomplete="email">
+            <input type="email" placeholder="***" id="email" required autofocus autocomplete="email">
             <label><b>Contraseña:</b></label>
-            <input type="password" placeholder="..." id="password" required>
+            <input type="password" placeholder="***" id="password" required>
             <input type="submit" value="Ingresar" class="btn btn-dark mt-3">
         </form>
         <div class="login__registro">
             <p>No tienes una cuenta? <a href="registrar.html"><button class="btn btn-dark">Registro</button></a></p>
         </div>
     </section>
-
     <h5>Debe registrarse para entrar.</h5>
-
     <script src="./js/login.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
